Fix alignment of button
#1993

--- a/app/assets/stylesheets/dashboard_popup.sass
+++ b/app/assets/stylesheets/dashboard_popup.sass
@@ -8,10 +8,10 @@
     color: #224368
     padding: 10px
     margin: 0
+    line-height: 25px
   .popup-actions
-    position: absolute
-    right: 9px
-    top: 7px
+    float: right
+    margin-top: -1px
     a.button
       padding: 4px 8px
       color: #224368
